# DatAction-Products

./: .platform.app.yaml  ProductApp.py  README.md  app.py  install-poetry.sh  products.json  pyproject.toml  requirements.txt  scrapingJT.py  scrapingMain.py  scrapingPM.py  scrapingZebra.py  server.py  test.py  utils.py
.platform/: routes.yaml  services.yaml
static/: main.css
templates/: NA.html  compare.html  downloadPDF.html  home.html  item.html  layout.html  products.html  search.html
